--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,10 +1,177 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <title>{% block nekland_admin_title %}Administration{% endblock %}</title>
-        <meta charset="UTF-8" />
-    </head>
-    <body>
-        {% block nekland_admin_content %}{% endblock %}
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>{% block nekland_admin_page_title %}Administration{% endblock %}</title>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width">
+
+    {% stylesheets
+    'components/bootstrap/css/bootstrap.min.css'
+    'components/bootstrap/css/bootstrap-responsive.min.css'
+    '../app/Resources/public/css/lib/datepicker.css'
+    '../app/Resources/public/css/admin.css'
+    filter='cssrewrite'
+    output='css/admin.css'
+    %}
+    <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+    <link rel="shortcut icon" href="/img/favicon.png" />
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+</head>
+<body>
+
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+
+            <a class="brand" href="/">{% block nekland_admin_title %}Administration{% endblock %}</a>
+
+            <div class="nav-collapse collapse">
+                <p class="navbar-text pull-right">
+                    {% if app.user is not empty %}
+                        Connecté en tant que <span>{{ app.user.username }}</span>
+                    {% else %}
+                        Administration non sécurisée
+                    {% endif %}
+                </p>
+
+                <ul id="nav-list-collapsed" class="nav">
+
+                    <li class="{% if app.request.attributes.get('_route') == 'admin' %}active{% endif %}">
+                        <a href="{{ path('admin') }}">
+                            <i class="icon-home"></i> Accueil
+                        </a>
+                    </li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_donation_index' %}active{% endif %}">
+                        <a href="{{ path('admin_donation_index') }}">
+                            <i class="icon-list-alt"></i> Lister les donations
+                        </a>
+                    </li>
+                    <li class="nav-header">Gestion des news</li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_news_new' %}active{% endif %}">
+                        <a href="{{ path('admin_news_new') }}">
+                            Ajouter une news
+                        </a>
+                    </li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_news_index' %}active{% endif %}">
+                        <a href="{{ path('admin_news_index') }}">
+                            Lister les news
+                        </a>
+                    </li>
+
+                    {{ knp_menu_render(
+                        'NeklandBaseAdminBundle:Builder:main',
+                        {currentClass: 'active', template: 'NeklandBaseAdminBundle:Menu:main.html.twig' }
+                    ) }}
+                </ul>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div id="nav-list" class="span3">
+            <div class="well sidebar-nav">
+                <ul class="nav nav-list">
+
+                    <li class="nav-header">Gestion des news</li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_news_new' %}active{% endif %}">
+                        <a href="{{ url('admin_news_new') }}">
+                            Ajouter une news
+                        </a>
+                    </li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_news_index' %}active{% endif %}">
+                        <a href="{{ url('admin_news_index') }}">
+                            Lister les news
+                        </a>
+                    </li>
+
+                    <li class="nav-header">Gestion des quêtes</li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_quest_new' %}active{% endif %}">
+                        <a href="{{ path('admin_quest_new') }}">
+                            Ajouter une quête
+                        </a>
+                    </li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_quest_index' %}active{% endif %}">
+                        <a href="{{ path('admin_quest_index') }}">
+                            Lister les quêtes
+                        </a>
+                    </li>
+
+                    <li class="nav-header">Gestion des pages</li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_page_new' %}active{% endif %}">
+                        <a href="{{ path('admin_page_new') }}">
+                            Ajouter une page
+                        </a>
+                    </li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_page_index' %}active{% endif %}">
+                        <a href="{{ path('admin_page_index') }}">
+                            Lister les pages
+                        </a>
+                    </li>
+
+                    <li class="nav-header">Outils Administratifs</li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin' %}active{% endif %}">
+                        <a href="{{ path('admin') }}">
+                            <i class="icon-home"></i> Accueil
+                        </a>
+                    </li>
+                    <li class="{% if app.request.attributes.get('_route') == 'admin_donation_index' %}active{% endif %}">
+                        <a href="{{ path('admin_donation_index') }}">
+                            <i class="icon-list-alt"></i> Lister les donations
+                        </a>
+                    </li>
+
+                    <li class="divider"></li>
+                    <li>
+                        <a href="https://docs.google.com/document/d/1iDAMIABdydo6mGt59BuPxvDFojpc8Md6csp6KGo25cg/edit?usp=sharing">
+                            <i class="icon-edit"></i> Cahier des charges
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="span9">
+            {% block body %}{% endblock %}
+        </div>
+    </div>
+
+    <hr>
+
+    <footer>
+        <p>© WLJS 2013</p>
+    </footer>
+
+</div>
+
+
+{% javascripts
+'components/jquery/jquery.min.js'
+'components/bootstrap/js/bootstrap.min.js'
+'../app/Resources/public/js/lib/bootstrap-datepicker.js'
+'../app/Resources/public/js/lib/bootstrap-datepicker.fr.js'
+'../app/Resources/public/js/admin.js'
+output='js/admin.js'
+%}
+<script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}
+<script type="text/javascript">
+    $('.datepicker').datepicker({
+        language: 'fr'
+    });
+</script>
+</body>
 </html>
