--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>{% block nekland_admin_page_title %}Administration{% endblock %}</title>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, width=device-width" />
 
     {% stylesheets
-    '@NeklandBaseAdminBundle/Resources/css/*.css'
+    '@NeklandBaseAdminBundle/Resources/css/bootstrap/*.css'
+    '@NeklandBaseAdminBundle/Resources/css/admin.css'
     filter='cssrewrite'
     output='css/admin.css'
     %}
@@ -138,11 +139,12 @@
                     </li>
                     #}
                     <li class="nav-header">Outils Administratifs</li>
-                    <li class="{% if app.request.attributes.get('_route') == 'admin_donation_index' %}active{% endif %}">
-                        <a href="{{ path('admin_donation_index') }}">
-                            <i class="icon-list-alt"></i> Lister les donations
+                    <li class="{% if app.request.attributes.get('_route') == 'nekland_base_admin_homepage' %}active{% endif %}">
+                        <a href="{{ path('nekland_base_admin_homepage') }}">
+                            <i class="icon-home"></i> Accueil
                         </a>
                     </li>
+
                 </ul>
             </div>
         </div>
