Added admin home content

--- a/Resources/views/Home/index.html.twig
+++ b/Resources/views/Home/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'NeklandBaseAdminBundle::layout.html.twig' %}
 
 {% block body %}
-Admin
+<div class="hero-unit">
+    <h1>Welcome !</h1>
+    <p>
+        Bienvenue dans l'administration de votre site.<br />
+        Ici vous pourrez modifier l'apparence et le contenu de votre site pour vos utilisateurs.
+    </p>
+</div>
 {% endblock body %}
