--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="span9">
-            {% block body %}{% endblock %}
+            {% block nekland_admin_content %}{% endblock %}
         </div>
     </div>
 
