--- a/Resources/views/Home/index.html.twig
+++ b/Resources/views/Home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'NeklandBaseAdminBundle::layout.html.twig' %}
 
-{% block body %}
+{% block nekland_admin_content %}
 <div class="hero-unit">
     <h1>Welcome !</h1>
     <p>
@@ -8,4 +8,4 @@
         Ici vous pourrez modifier l'apparence et le contenu de votre site pour vos utilisateurs.
     </p>
 </div>
-{% endblock body %}
+{% endblock nekland_admin_content %}
