--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
             </a>
 
-            <a class="brand" href="/">{% block nekland_admin_title %}Administration{% endblock %}</a>
+            <a class="brand" href="{{ path('nekland_base_admin_homepage') }}">{% block nekland_admin_title %}Administration{% endblock %}</a>
 
             <div class="nav-collapse collapse">
                 <p class="navbar-text pull-right">
