Flash on everypages

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -68,6 +68,7 @@
             </div>
         </div>
         <div class="span9">
+            {{ include('NeklandBaseAdminBundle:Misc:flash.html.twig') }}
             {% block nekland_admin_content %}{% endblock %}
         </div>
     </div>
