--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -86,6 +86,7 @@
 {% javascripts
 '@NeklandBaseAdminBundle/Resources/js/jquery.min.js'
 '@NeklandBaseAdminBundle/Resources/js/bootstrap.min.js'
+'@NeklandBaseAdminBundle/Resources/js/main.js'
 '@NeklandBaseAdminBundle/Resources/js/nekland-editor.js'
 '@NeklandBaseAdminBundle/Resources/js/nekland-editor-fr.js'
 output='js/admin.js'
