--- a/Resources/css/admin.css
+++ b/Resources/css/admin.css
@@ -156,3 +156,12 @@ input[type=text] {
 .red-warning {
     color: #dc2626 !important;
 }
+
+.nk-sidenav {
+    padding-top:      10px;
+    padding-bottom:   10px;
+    text-shadow:      0 1px 0 #fff;
+    background-color: #f7f5fa;
+    border-radius:    5px;
+    margin-left:      5px;
+}
