--- a/Resources/views/Menu/main.html.twig
+++ b/Resources/views/Menu/main.html.twig
@@ -70,7 +70,7 @@
 {% block list %}
     {% if item.hasChildren and options.depth is not sameas(0) and item.displayChildren %}
         {% import _self as knp_menu %}
-        <ul{{ knp_menu.attributes(listAttributes) }} class="nav nav-list">
+        <ul{{ knp_menu.attributes(listAttributes) }} class="nav nk-sidenav">
             {{ block('children') }}
         </ul>
     {% endif %}
