--- a/Resources/views/form.html.twig
+++ b/Resources/views/form.html.twig
@@ -4,11 +4,9 @@
 
 {% block form_row %}
 {% spaceless %}
-    <div class="control-group{{ errors|length > 0 ? ' error' : ''}}">
+    <div class="form-group{{ errors|length > 0 ? ' error' : ''}}">
         {{ form_label(form, label|default(null)) }}
-        <div class="controls">
-            {{ form_widget(form) }}
-        </div>
+        {{ form_widget(form) }}
         {{ form_errors(form) }}
     </div>
 {% endspaceless %}
@@ -45,6 +43,24 @@
 {% endspaceless %}
 {% endblock submit_widget %}
 
+{% block widget_attributes %}
+{% spaceless %}
+    id="{{ id }}" name="{{ full_name }}"{% if read_only %} readonly="readonly"{% endif %}{% if disabled %} disabled="disabled"{% endif %}{% if required %} required="required"{% endif %}{% if max_length %} maxlength="{{ max_length }}"{% endif %}{% if pattern %} pattern="{{ pattern }}"{% endif %}
+
+    {% if attr['class'] is not defined %}
+        class="form-control"
+    {% else %}
+        {% set attr = attr|merge({'class': 'form-control ' ~ attr['class']}) %}
+    {% endif %}
+    {% for attrname, attrvalue in attr %}
+        {% if attrname in ['placeholder', 'title'] %}
+            {{ attrname }}="{{ attrvalue|trans({}, translation_domain) }}"
+        {% else %}
+            {{ attrname }}="{{ attrvalue }}"
+        {% endif %}{% endfor %}
+{% endspaceless %}
+{% endblock widget_attributes %}
+
 
 {# Template for Nekland Editor #}
 {% block nekland_editor_widget %}
@@ -54,3 +70,4 @@
     <textarea {{ block('widget_attributes') }}>{{ value }}</textarea>
 {% endspaceless %}
 {% endblock %}
+
