--- a/Resources/views/Crud/show.html.twig
+++ b/Resources/views/Crud/show.html.twig
@@ -7,18 +7,18 @@
     <p>{% trans with {'%element%': resource.name} %}nekland_admin.show.explaination{% endtrans %}</p>
 
     <table class="table table-striped table-bordered">
-        {% for key, field in resource.display %}
+        {% for name, field in resource.properties %}
         <tr>
             <th>
                 {% if field.label is defined %}
                     {{ field.label }}
                 {% else %}
-                    {{ key }}
+                    {{ name }}
                 {% endif %}
             </th>
             <td>
-                {{ key == 'id' ? '#' : '' }}
-                {{ attribute(object, key) }}
+                {{ name == 'id' ? '#' : '' }}
+                {{ attribute(object, name) }}
             </td>
         </tr>
         {% endfor %}
