--- a/Resources/views/Crud/deletebox.html.twig
+++ b/Resources/views/Crud/deletebox.html.twig
@@ -3,14 +3,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Supprimer un élément</h4>
+                <h4 class="modal-title">{% trans %}nekland_admin.crud.delete.delete_item{% endtrans %}</h4>
             </div>
             <div class="modal-body">
-                <p>Êtes vous sûr de vouloir supprimer cet élément ? Toute suppression est définitive.</p>
+                <p>{% trans %}nekland_admin.crud.delete.confirmation{% endtrans %}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                <a href="#" class="btn btn-danger" id="delete-item">Supprimer</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}nekland_admin.crud.delete.cancel{% endtrans %}</button>
+                <a href="#" class="btn btn-danger" id="delete-item">{% trans %}nekland_admin.crud.delete.delete{% endtrans %}</a>
             </div>
         </div>
     </div>
