--- a/Resources/views/Crud/index.html.twig
+++ b/Resources/views/Crud/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block nekland_admin_content %}
 
-    <h1>Liste des {{ resource.pluralName }}</h1>
+    <h1>{% trans with {'%name%': resource.pluralName} %}nekland_admin.crud.index.title{% endtrans %}</h1>
 
     <table class="table table-bordered table-striped crud-list table-condensed">
         <thead>
@@ -18,7 +18,7 @@
                         </th>
                     {% endif %}
                 {% endfor %}
-                <th class="crud-actions">Actions</th>
+                <th class="crud-actions">{% trans %}nekland_admin.crud.index.actions{% endtrans %}</th>
             </tr>
         </thead>
         <tbody>
@@ -51,14 +51,14 @@
                         {% endfor %}
                         <a class="btn btn-mini btn-danger ask-delete"
                            data-href="{{ path(resource.routes.delete.name, resource.getRouteParameters('delete', object)) }}" href="#">
-                            <i class="icon-trash icon-white"></i> Supprimer
+                            <i class="icon-trash icon-white"></i> {% trans %}nekland_admin.crud.delete.delete{% endtrans %}
                         </a>
                     </td>
                 </tr>
             {% else %}
                 <tr>
                     <td colspan="{{ resource.display | length + 1 }}">
-                        Aucun {{ resource.name }}
+                        {% trans %}nekland_admin.crud.index.none{% endtrans %} {{ resource.name }}
                     </td>
                 </tr>
             {% endfor %}
@@ -68,7 +68,9 @@
     <hr />
 
     <div class="well">
-        <a href="{{ path(resource.routes.new.name, resource.getRouteParameters('new')) }}" class="btn btn-primary">Nouveau</a>
+        <a href="{{ path(resource.routes.new.name, resource.getRouteParameters('new')) }}" class="btn btn-primary">
+            {% trans %}nekland_admin.crud.new.new{% endtrans %}
+        </a>
     </div>
 
     {% include 'NeklandBaseAdminBundle:Crud:deletebox.html.twig' %}
