Changed nekland editor

--- a/Resources/css/nekland-editor.css
+++ b/Resources/css/nekland-editor.css
@@ -1,11 +1,31 @@
-.nekland-editor-html {
-    border:         1px solid #bbb;
-    border-radius:  3px;
-    padding:        5px;
-    overflow:       auto;
+.dropdown-menu>li>a.nekland-editor-formath1,
+.dropdown-menu>li>a.nekland-editor-formath2,
+.dropdown-menu>li>a.nekland-editor-formath3,
+.dropdown-menu>li>a.nekland-editor-formath4,
+.dropdown-menu>li>a.nekland-editor-formath5 {
+    font-weight: bold;
 }
 
-p.error {
-    padding-top: 5px;
-    color: red;
+a.nekland-editor-formath1 {
+    font-size: 28px;
+}
+a.nekland-editor-formath2 {
+    font-size: 25px;
+}
+a.nekland-editor-formath3 {
+    font-size: 22px;
+}
+a.nekland-editor-formath4 {
+    font-size: 19px;
+}
+a.nekland-editor-formath5 {
+    font-size: 16px;
+}
+
+.nekland-editor-html td {
+    height: 35px;
+}
+
+.nekland-editor-html {
+	overflow: auto;
 }
