--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -85,8 +85,7 @@
 '@NeklandBaseAdminBundle/Resources/js/jquery.min.js'
 '@NeklandBaseAdminBundle/Resources/js/bootstrap.min.js'
 '@NeklandBaseAdminBundle/Resources/js/main.js'
-'@NeklandBaseAdminBundle/Resources/js/nekland-editor.js'
-'@NeklandBaseAdminBundle/Resources/js/nekland-editor-fr.js'
+'@NeklandBaseAdminBundle/Resources/js/nekland-editor.min.js'
 output='js/admin.js'
 %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
