Updated documentation to the new version of the bundle !

--- a/Resources/views/form.html.twig
+++ b/Resources/views/form.html.twig
@@ -62,6 +62,23 @@
 {% endblock widget_attributes %}
 
 
+{% block datetime_widget %}
+    {% spaceless %}
+        {% if widget == 'single_text' %}
+            {{ block('form_widget_simple') }}
+        {% else %}
+            {% set attr = attr|merge({'class': 'date_container ' ~ attr['class']}) %}
+            <div {{ block('widget_container_attributes') }}>
+                {{ form_errors(form.date) }}
+                {{ form_errors(form.time) }}
+                {{ form_widget(form.date) }}
+                {{ form_widget(form.time) }}
+            </div>
+        {% endif %}
+    {% endspaceless %}
+{% endblock datetime_widget %}
+
+
 {# Template for Nekland Editor #}
 {% block nekland_editor_widget %}
 {% spaceless %}
