--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -56,20 +56,21 @@
         </div>
     </div>
 </div>
+<div class="container-fluid">
+    <div class="row">
+        <div id="nav-list" class="col-lg-3">
+            <div class="hidden-print">
 
-<div class="row">
-    <div id="nav-list" class="col-lg-3">
-        <div class="hidden-print">
-
-            {{ knp_menu_render(
-                'NeklandBaseAdminBundle:Builder:mainMenu',
-                {currentClass: 'active', template: 'NeklandBaseAdminBundle:Menu:main.html.twig' }
-            ) }}
+                {{ knp_menu_render(
+                    'NeklandBaseAdminBundle:Builder:mainMenu',
+                    {currentClass: 'active', template: 'NeklandBaseAdminBundle:Menu:main.html.twig' }
+                ) }}
+            </div>
         </div>
-    </div>
-    <div class="col-lg-9">
-        {{ include('NeklandBaseAdminBundle:Misc:flash.html.twig') }}
-        {% block nekland_admin_content %}{% endblock %}
+        <div class="col-lg-9">
+            {{ include('NeklandBaseAdminBundle:Misc:flash.html.twig') }}
+            {% block nekland_admin_content %}{% endblock %}
+        </div>
     </div>
 </div>
 
